# VibeRails

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  seed_data.py
cli/: __init__.py  main.py  scanner.py  sync.py
server/: __init__.py  ai_client.py  crypto_utils.py  database.py  main.py  models.py
server/routes/: __init__.py  ai_providers.py  chat.py  contracts.py  features.py  issues.py  members.py  sync.py
viberails_cli/: __init__.py
vibrails.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
web/: index.html
