[project]
name = "vibrails"
version = "0.1.0"
description = "VibeRails project scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "click>=8.1.7",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
viberails = "viberails_cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["server*", "cli*", "viberails_cli*"]
